syntax = "proto3";

message ContainsRequest {
    string key = 1;
}