syntax = "proto3";

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {
	bool deleted = 1;
}